testing model 92%, testing controller 78%